ollama/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencryptcertmanager
  labels:
    app.kubernetes.io/name: ollama
  name: home-assistant
  namespace: home-assistant
spec:
  ingressClassName: nginx
  rules:
    - host: ollama.crobasaurusrex.ryanbeales.com
      http:
        paths:
          - backend:
              service:
                name: ollama
                port:
                  number: 11434
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - ollama.crobasaurusrex.ryanbeales.com
      secretName: ollama-crobasaurusrex-ryanbeales-com-tls
